--- a/Analysis-accessory.Rmd
+++ b/Analysis-accessory.Rmd
@@ -1,23 +1,20 @@
 ```{r}
-library(digest)
-library(Rcpp)
-library(reshape2)
-library(tibble)
+# library(digest)
+# library(Rcpp)
+# library(reshape2)
+# library(tibble)
 library(smatr)
 library(broom)
 library(dplyr)
-library(stats)
-library(scales)
-library(colorspace)
+# library(stats)
+# library(scales)
+# library(colorspace)
 
 remake::make("export")
 
 SummaryInd <- readRDS("export/SummaryInd.rds")
 SummarySpp <- readRDS("export/SummarySpp.rds")
 SummarySppAge <- readRDS("export/SummarySppAge.rds")
-HarvestData <- readRDS("export/HarvestData.rds")
-InvestmentByPart <- readRDS("export/Investment_FD_all.rds")
-PartsSummary <- readRDS("export/PartsSummary_all.rds")
 
 source("R/figures.R")
 ```
