--- a/Analaysis-RA.Rmd
+++ b/Analaysis-RA.Rmd
@@ -21,29 +21,19 @@ InvestmentByPart <- readRDS("export/Investment_FD_all.rds")
 PartsSummary <- readRDS("export/PartsSummary_all.rds")
 
 source("R/figures.R")
-```
-
-# pdf('ms/RA/Figure_1_stacked_lines.pdf', height=11.5, width=8) plot
-
-SummarySppAge[["mean"]]$leaf_shed_mean <- SummaryCombine %>%
-        group_by(species,age) %>%
-        summarise(mean(leaf_shed_mean))
-
-SummarySppAge[["mean"]]$leaf_replacement_mean <- SummaryCombine %>%
-        group_by(species,age) %>%
-        summarise(mean(leaf_replacement_mean))
-
-
 
 data <- select(SummarySppAge[["mean"]], species, age, repro_inv, growth_leaf, leaf_replacement,leaf_area_0,leaf_weight_0,total_inv,prop_surplus,
   growth_stem, leaf_shed,prop_stem,prop_leaf_replacement,prop_leaf_expand,prop_repro,RA_max_1,lifespan,height, RA_vs_all_leaf,
-  LL_death,height_0,total_weight_0,all_leaf_inv,surplus_inv,all_leaf_and_repro_inv,propagule_inv,ovule_count,success_inv)
-data$leaf_shed2 <- data$leaf_weight_0 / data$LL_death
-data_ind <- select(SummaryCombine,species,individual,age, LL_death,height_0,leaf_shed,leaf_weight_0,propagule_inv,ovule_count,
+  prop_leaf_loss,height_0,total_weight_0,all_leaf_inv,surplus_inv,all_leaf_and_repro_inv,propagule_inv,ovule_count,success_inv)
+
+data_ind <- select(SummaryCombine,species,individual,age, prop_leaf_loss,height_0,leaf_shed,leaf_weight_0,propagule_inv,ovule_count,
                    growth_leaf_pos,repro_inv,total_weight_0,all_leaf_inv,total_inv,surplus_inv,all_leaf_and_repro_inv,age,success_inv)
 
+```
 
 ```{r}
+
+# pdf('ms/RA/Figure_1_stacked_lines.pdf', height=11.5, width=8) plot
 par(mfrow = c(7,4), cex = 1, oma = c(5, 5, 1, 1), mar = c(0, 3, 2, 1))
 
 all_species <- unique(data$species)
@@ -74,13 +64,12 @@ for (i in seq_along(all_species)) {
   }
   
   #leaf area
-  plot(NA, log = "x", xlim = c(1.4, 32), ylim=c(1,(max(data_sp$leaf_weight_0)*1.1)),xaxs = "i", yaxs = "i", xaxt="n", ylab="n")
+  plot(NA, log = "x", xlim = c(1.4, 32), ylim=c(0,1),xaxs = "i", yaxs = "i", xaxt="n", ylab="n")
   box()
   axis(1, labels = (i %in% c(7,14)))
-  points(x = data_sp$age, y = data_sp$leaf_weight_0, col = "darkseagreen4", lwd=2,type="l")
-  points(x = data_sp_ind$age, y = data_sp_ind$leaf_weight_0, col = "black")
+  points(x = data_sp$age, y = data_sp$prop_leaf_loss, col = "darkseagreen4", lwd=2,type="l")
+  points(x = data_sp_ind$age, y = data_sp_ind$prop_leaf_loss, col = "black")
   #points(x = data_sp_ind$age, y = data_sp_ind$leaf_weight_0, col = "black",cex=0.5,pch=16)
-  #points(x = data_sp$age, y = data_sp$leaf_shed2, col = "darkseagreen4", lwd=2,type="l")
   #points(x = data_sp_ind$age, y = data_sp_ind$leaf_shed, col = "darkseagreen4")
   #points(x = data_sp$age, y = data_sp$growth_leaf, col = "darkseagreen2", lwd=2,type="l")
   mtext(labels.spp.full(all_species[i]), 3, 0)
@@ -94,8 +83,7 @@ for (i in seq_along(all_species)) {
   axis(1, labels = (i %in% c(7,14)))
   points(x = data_sp$age, y = data_sp$repro_inv, col = "coral3", lwd=2,type="l")
   #points(x = data_sp_ind$age, y = data_sp_ind$leaf_weight_0, col = "black",cex=0.5,pch=16)
-  points(x = data_sp$age, y = data_sp$leaf_shed2, col = "darkseagreen4", lwd=2,type="l")
-  #points(x = data_sp_ind$age, y = data_sp_ind$leaf_shed, col = "darkseagreen4")
+  points(x = data_sp_ind$age, y = data_sp_ind$leaf_shed, col = "darkseagreen4")
   points(x = data_sp$age, y = data_sp$growth_leaf, col = "darkseagreen2", lwd=2,type="l")
   mtext(labels.spp.full(all_species[i]), 3, 0)
   
@@ -125,12 +113,12 @@ for (i in seq_along(all_species)) {
   # }
   
   # #leaf lifespan
-  # plot(NA,log = "x", ylim = c(0, 6),  xlim = c(1.2, 37), xaxs = "i", yaxs = "i", axes= FALSE, ann=FALSE)
+  # plot(NA,log = "x", ylim = c(0, 1),  xlim = c(1.2, 37), xaxs = "i", yaxs = "i", axes= FALSE, ann=FALSE)
   # box()
   # axis(1, labels = (i %in% c(7,14)))
   # axis(2, at = c(0,2,4,6), labels = TRUE, las=1)
-  # points(x = data_sp$age, y = data_sp$LL_death, col = "darkseagreen4", lwd=2,type="l")
-  # points(x = data_sp_ind$age, y = data_sp_ind$LL_death, col = "black")
+  # points(x = data_sp$age, y = data_sp$prop_leaf_loss, col = "darkseagreen4", lwd=2,type="l")
+  # points(x = data_sp_ind$age, y = data_sp_ind$prop_leaf_loss, col = "black")
   # 
   # if (i %in% c(4,11)) {
   #   mtext("Leaf lifespan (yrs), based on leaf death", 2, line=2, outer=FALSE)
