--- a/ms/Accessory/Wenk-Accessory-SI.Rnw
+++ b/ms/Accessory/Wenk-Accessory-SI.Rnw
@@ -55,7 +55,7 @@ print_table_species <- function(species, data) {
             label=sprintf("tab:parts_%s", species),
             caption=sprintf("Table of parts for %s.", species)),
       sanitize.text.function=I,
-      , table.placement = "H"
+      , table.placement = "h"
       , caption.placement = "top"
       , include.rownames = FALSE
       , include.colnames = TRUE
@@ -64,6 +64,26 @@ print_table_species <- function(species, data) {
       , floating = FALSE)
 }
 
+
+
+print_table_metadata <- function(path) {
+
+  data <-  read.csv(path, stringsAsFactors=FALSE, check.names=FALSE)
+  file <- gsub("_", "\\_", basename(path), fixed = TRUE)
+  print(xtable(data,
+            hline.after=c(1),
+            label=sprintf("tab:file_", file),
+            caption=
+              sprintf("Variables within the file `%s`. These definitions are defined within the file `%s` in the folder `data`.",
+              gsub("\\_meta", "", file, fixed = TRUE), file)),
+      , table.placement = "h"
+      , caption.placement = "top"
+      , include.rownames = FALSE
+      , include.colnames = TRUE
+      , size = "small"
+      , tabular.environment = 'longtable'
+      , floating = FALSE)
+}
 
 plot_graph <- function(graph) {
 
@@ -128,8 +148,13 @@ Investment categories
 
 \section{Details about input files (Old text to adapt)}
 
-2013\_Kuringgai\_harvest
+\subsection{Harvest}
+
 Allometric data for plants harvested in autumn 2013, including weights and diameters of each harvested segment. Briefly, this dataset includes data on 14 dominant species that are all obligate seeders following a fire. For each species, data were collected from 7 replicate individuals at each of 6 sites, or the subset of those sites on which a given species occurred. The sites represent a chronosequence created by a patchy fire history in the area; all species germinate within a year of a fire, allowing fire history to be used as a proxy for age. When the plants were harvested, they were divided into multiple segments along the stem leader. The diameter was measured at each cut in autumn 2012, when the plants were tagged, and in autumn 2013, at harvest.  For each segment, the dry weights of the leaves and stems were determined separately.
+
+<<echo=FALSE,results='asis'>>=
+  print_table_metadata("../../data/harvest_meta.csv")
+@
 
 2013\_Kuringgai\_harvest-meta
 Brief descriptions of each data column in the file 2013\_Kuringgai\_harvest, including units.
@@ -137,8 +162,12 @@ Brief descriptions of each data column in the file 2013\_Kuringgai\_harvest, inc
 flower\_parts
 Harvested and weighed flower parts, including collections from tagged individuals (once mature or at time of harvest) and from other individuals in the population (to estimate weight of specific plant parts). All plant parts included in a species' "plant map" have weights in this spreadsheet – or, in rare cases, entries are instead plants parts whose weight is used to calculate the weight of a plant part included in a "plant map". (A "plant map" shows the developmental trajectory of a flower or inflorescence from bud to seed for each species, indicating the flow or carbon as well as discarded parts.) If plant parts are collected from a tagged individual, this spreadsheet also indicates in which census periods this specific weight, rather than a species average, should be used for calculating that individual's reproductive investment. Plant parts all have counts and weights, while the subset of plant parts whose size varies, also have columns indicating height and diameter dimensions; the weight of the plant part at a specific size is then determined by either a regression or volume calculation. For a few plant parts, census data measure the length of stem or cone covered with flowers; for these situations, the segment length collected is also recorded, such that the number of flowers per unit length can be calculated.
 
-Flower\_parts-meta
+\subsection{Flower\_parts}
 Brief descriptions of each data column in the file flower\_parts, including units.
+
+<<echo=FALSE,results='asis'>>=
+  print_table_metadata("../../data/flowerParts_meta.csv")
+@
 
 Flowering\_cat\_lookup\_table
 This file contains a matrix of plant parts (rows) by species (columns). For each cell that is used on a given species plant map, the meaning of the values in the spreadsheet titled "reproduction" are indicated in this spreadsheet. Possible method are (1) count, indicating that the numbers represent simple counts; (2) count\_by\_length, indicating that the length of stem or cone covered with buds, flowers or fruit is measured; (3) regress\_by\_dim, indicating that the dimensions of the flowering part are measured and must be converted to a dry mass using a regression equation; and (4) volume, indicating that the height and diameter of the flowering part are given and must be converted to a dry mass using the calculated volume of the flowering part multiplied by the average density of the flowering part.
