--- a/Analysis-accessory.Rmd
+++ b/Analysis-accessory.Rmd
@@ -317,62 +317,80 @@ write.csv(results, file="ms/Accessory/output/Table03_correlations_with_repro_inv
 
 #Figure 01. predictions
 ```{r}
-png("ms/Accessory/output/Figure01b&c_predictions.png", height=3, width=6, units="in", res=300)
-par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.05,.2), mai=c(.8,.8,.1,.05)) 
+png("ms/Accessory/output/Figure01b&c&d_predictions.png", height=3.6, width=9, units="in", res=300)
+par(mfrow=c(1,3), cex=1, omi=c(.1,.1,.05,.2), mai=c(.8,.8,.6,.05))
 plot(0,0,ylim=c(0,1),yaxt="n",xaxt="n",xlim=c(0,1),col="white",xlab="",ylab="")
-segments(x0=.2,x1=.9,y0=.9,y1=.2,lty=2)
+segments(x0=.2,x1=.9,y0=.9,y1=.2,lty=1)
+axis(1, at=c(0,1),labels=c("lower","higher"),cex.axis=1)
+axis(2, at=c(0,1),labels=c("lower","higher"),cex.axis=1,las=2)
+mtext(text="b.  Trade-off 1:",side=3,outer=FALSE,adj=0,line=1.6)
+mtext(text="Seed count-reproductive costs",side=3,outer=FALSE,adj=0,line=0.7)
+mtext(text="seed count,",side=2,line=1.3,outer=FALSE,cex=0.8)
+mtext(text="scaled to plant size",side=2,line=0.4,outer=FALSE,cex=0.8)
+mtext(text="reproductive costs",side=1,line=0.3,outer=FALSE,cex=0.8)
+mtext(text="(mg/seed)",side=1,line=1.2,outer=FALSE,cex=0.8)
+#extra.top.left("b",2,1)
+
+plot(0,0,ylim=c(0,1),yaxt="n",xaxt="n",xlim=c(0,1),col="white",xlab="",ylab="")
 segments(x0=.1,x1=.8,y0=.8,y1=.1,lty=1)
 axis(1, at=c(0,1),labels=c("lower","higher"),cex.axis=1)
 axis(2, at=c(0,1),labels=c("lower","higher"),cex.axis=1,las=2)
-mtext(text="count, scaled to plant size",side=2,line=1.1,outer=FALSE,cex=0.8)
-mtext(text="costs (mg/seed)",side=1,line=1.0,outer=FALSE,cex=0.8)
-legend("bottomleft",legend=c("seed count by reproductive costs","initiated ovules count by pollen-attraction costs"),col=c("black","black"),pch=c(16,21),bty="n",cex=0.5)
-extra.top.left("b",2,1)
+mtext(text="c.  Trade-off 2.",side=3,outer=FALSE,adj=0,line=1.6)
+mtext(text="Ovule count-pollen attraction costs",side=3,outer=FALSE,adj=0,line=0.7)
+mtext(text="mature ovules count,",side=2,line=1.3,outer=FALSE,cex=0.8)
+mtext(text="scaled to plant size",side=2,line=0.4,outer=FALSE,cex=0.8)
+mtext(text="pollen attraction costs",side=1,line=0.3,outer=FALSE,cex=0.8)
+mtext(text="(mg/seed)",side=1,line=1.2,outer=FALSE,cex=0.8)
+#extra.top.left("c",2,1)
 
 plot(0,0,ylim=c(0,1),yaxt="n",xaxt="n",xlim=c(0,1),col="white",xlab="",ylab="")
 segments(x0=.1,x1=.9,y0=.9,y1=.1,lty=1)
 axis(1, at=c(0,1),labels=c("lower","higher"),cex.axis=1)
 axis(2, at=c(0,1),labels=c("lower","higher"),cex.axis=1,las=2)
-mtext(text="choosiness (ovule:seed)",side=2,line=1.3,outer=FALSE,cex=0.8)
-mtext(text="pollen attraction costs,",side=1,line=1.1,outer=FALSE,cex=0.8)
-mtext(text="scaled to plant size",side=1,line=1.9,outer=FALSE,cex=0.8)
-extra.top.left("c",2,1)
+mtext(text="d.  Trade-off 3.",side=3,outer=FALSE,adj=0,line=1.6)
+mtext(text="Choosiness-pollen attraction costs",side=3,outer=FALSE,adj=0,line=0.7)
+mtext(text="choosiness",side=2,line=1.3,outer=FALSE,cex=0.8)
+mtext(text="(ovule:seed)",side=2,line=0.4,outer=FALSE,cex=0.8)
+mtext(text="pollen attraction costs,",side=1,line=0.3,outer=FALSE,cex=0.8)
+mtext(text="scaled to plant size",side=1,line=1.2,outer=FALSE,cex=0.8)
+mtext(text="(mg/seed)",side=1,line=2.1,outer=FALSE,cex=0.8)
+#extra.top.left("d",2,1)
 dev.off()
 
-png("ms/Accessory/output/Figure01def_predictions.png", height=6, width=6, units="in", res=300)
-
-par(mfrow=c(2,2), cex=1, omi=c(.1,.1,.05,.2), mai=c(.8,.8,.1,.05))
-plot(0,0,ylim=c(0,1),yaxt="n",xaxt="n",xlim=c(0,1),col="white",xlab="",ylab="")
-segments(x0=.1,x1=.9,y0=.9,y1=.1,lty=1)
-segments(x0=.15,x1=.85,y0=.15,y1=.85,lty=2)
-axis(2, at=c(0,1),labels=c(0,1),cex.axis=1,las=2)
-axis(1, at=c(0,1),labels=c("smaller","larger"),cex.axis=1)
-mtext(text="proportion all pollen-attraction investment",side=2,line=1.8,outer=FALSE,cex=0.8)
-mtext(text="seed size (mg)",side=1,line=1.3,outer=FALSE,cex=0.8)
-legend("bottomleft",legend=c("become seeds","are aborted before provisioning"),title="into ovules that:",col=c("black","black"),pch=c(16,21),bty="n",cex=0.5,xjust=0)
-extra.top.left("d",2,1)
-
-plot(0,0,ylim=c(0,1),yaxt="n",xaxt="n",xlim=c(0,1),col="white",xlab="",ylab="")
-segments(x0=.1,x1=.9,y0=.9,y1=.1,lty=2)
-segments(x0=.15,x1=.85,y0=.15,y1=.85,lty=1)
-axis(2, at=c(0,1),labels=c(0,1),cex.axis=1,las=2)
-axis(1, at=c(0,1),labels=c("smaller","larger"),cex.axis=1)
-mtext(text="proportion all provisioning investment",side=2,line=1.8,outer=FALSE,cex=0.8)
-mtext(text="seed size (mg)",side=1,line=1.3,outer=FALSE,cex=0.8)
-legend("bottomleft",legend=c("become seeds","are aborted"),title="into zygotes that:",col=c("black","black"),pch=c(16,21),bty="n",cex=0.5,xjust=0)
-extra.top.left("e",2,1)
-
-plot(0,0,ylim=c(0,1),yaxt="n",xaxt="n",xlim=c(0,1),col="white",xlab="",ylab="")
-segments(x0=.1,x1=.9,y0=.9,y1=.1,lty=1)
-segments(x0=.15,x1=.9,y0=.15,y1=.9,lty=2)
-axis(2, at=c(0,1),labels=c(0,1),cex.axis=1,las=2)
-axis(1, at=c(0,1),labels=c("smaller","larger"),cex.axis=1)
-mtext(text="proportion total success costs",side=2,line=1.8,outer=FALSE,cex=0.8)
-mtext(text="seed size (mg)",side=1,line=1.3,outer=FALSE,cex=0.8)
-legend("bottomleft",legend=c("pollen-attraction costs","provisioning costs"),col=c("black","black"),pch=c(16,21),bty="n",cex=0.5)
-extra.top.left("f",2,1)
-
-dev.off()
+# png("ms/Accessory/output/Figure01def_predictions.png", height=6, width=6, units="in", res=300)
+# 
+# par(mfrow=c(2,2), cex=1, omi=c(.1,.1,.05,.2), mai=c(.8,.8,.1,.05))
+# plot(0,0,ylim=c(0,1),yaxt="n",xaxt="n",xlim=c(0,1),col="white",xlab="",ylab="")
+# segments(x0=.1,x1=.9,y0=.9,y1=.1,lty=1)
+# segments(x0=.15,x1=.85,y0=.15,y1=.85,lty=2)
+# axis(2, at=c(0,1),labels=c(0,1),cex.axis=1,las=2)
+# axis(1, at=c(0,1),labels=c("smaller","larger"),cex.axis=1)
+# mtext(text="proportion all pollen-attraction investment",side=2,line=1.8,outer=FALSE,cex=0.8)
+# mtext(text="seed size (mg)",side=1,line=1.3,outer=FALSE,cex=0.8)
+# legend("bottomleft",legend=c("become seeds","are aborted before provisioning"),title="into ovules that:",col=c("black","black"),pch=c(16,21),bty="n",cex=0.5,xjust=0)
+# extra.top.left("d",2,1)
+# 
+# plot(0,0,ylim=c(0,1),yaxt="n",xaxt="n",xlim=c(0,1),col="white",xlab="",ylab="")
+# segments(x0=.1,x1=.9,y0=.9,y1=.1,lty=2)
+# segments(x0=.15,x1=.85,y0=.15,y1=.85,lty=1)
+# axis(2, at=c(0,1),labels=c(0,1),cex.axis=1,las=2)
+# axis(1, at=c(0,1),labels=c("smaller","larger"),cex.axis=1)
+# mtext(text="proportion all provisioning investment",side=2,line=1.8,outer=FALSE,cex=0.8)
+# mtext(text="seed size (mg)",side=1,line=1.3,outer=FALSE,cex=0.8)
+# legend("bottomleft",legend=c("become seeds","are aborted"),title="into zygotes that:",col=c("black","black"),pch=c(16,21),bty="n",cex=0.5,xjust=0)
+# extra.top.left("e",2,1)
+# 
+# plot(0,0,ylim=c(0,1),yaxt="n",xaxt="n",xlim=c(0,1),col="white",xlab="",ylab="")
+# segments(x0=.1,x1=.9,y0=.9,y1=.1,lty=1)
+# segments(x0=.15,x1=.9,y0=.15,y1=.9,lty=2)
+# axis(2, at=c(0,1),labels=c(0,1),cex.axis=1,las=2)
+# axis(1, at=c(0,1),labels=c("smaller","larger"),cex.axis=1)
+# mtext(text="proportion total success costs",side=2,line=1.8,outer=FALSE,cex=0.8)
+# mtext(text="seed size (mg)",side=1,line=1.3,outer=FALSE,cex=0.8)
+# legend("bottomleft",legend=c("pollen-attraction costs","provisioning costs"),col=c("black","black"),pch=c(16,21),bty="n",cex=0.5)
+# extra.top.left("f",2,1)
+# 
+# dev.off()
 ```
 
 #Figure 2
@@ -381,7 +399,6 @@ png("ms/Accessory/output/Figure02.png", height=9, width=6, units="in", res=300)
 
 par(mfrow=c(3,2), cex=1, omi=c(.1,.1,.05,.05), mai=c(.7,.8,.05,.05)) 
 options(scipen = 5)
-
 
 #panel a
 plot(scaled_seed_count~repro_costs,SummarySpp[["mean"]],pch=16,log="xy",col=venetian_red,xlim=c(.01,5000),ylim=c(5e-4,500),yaxt="n",xaxt="n",ylab="",xlab="",cex=1)
@@ -399,6 +416,16 @@ line_function_log_xy(SummarySpp[["mean"]]$repro_costs,mod_seed,1,col=venetian_re
 line_function_log_xy(SummarySpp[["mean"]]$pollen_attract_costs,mod_ovule,1,col=cerulean)
 legend("bottomleft",legend=c("seed count by reproductive costs","mature ovules count by","pollen-attraction costs"),col=c(venetian_red,cerulean,"white"),pch=c(16,16,16),bty="n",cex=0.7)
 extra.top.left.logxy("a",2,1)
+
+
+plot(choosiness2~prop_pollen_attract_vs_all_repro,SummarySpp[["mean"]],log="xy",col=cerulean,pch=16,xlim=c(.002,.3),ylim=c(3,800),yaxt="n",cex=1,ylab="",xlab="",xaxt="n")
+axis(2, at=c(10,100,1000), labels=c(10,100,1000),cex.axis=0.8,las=2)
+axis(1, at=c(0.01,0.1), labels=c(0.01,0.1),cex.axis=0.8)
+mtext("pollen-attractions costs, scaled to leaf area",1,line=1.7,cex=0.7)
+mtext("choosiness (ovules:seed)",2,line=2.3,cex=0.7)
+#mod_choosy <- sma(choosiness2~scaled_pollen_attract_costs,data=subset(SummarySpp[["mean"]]),log="xy",slope=-1,method="SMA")
+mod_choosy2 <- sma(choosiness2~prop_pollen_attract_vs_all_repro,data=subset(SummarySpp[["mean"]],species!="EPMI"),log="xy",slope=-1,method="SMA")
+
 
 #panel b
 plot(choosiness2~scaled_pollen_attract_costs,SummarySpp[["mean"]],log="xy",col=cerulean,pch=16,xlim=c(.002,.3),ylim=c(3,800),yaxt="n",cex=1,ylab="",xlab="",xaxt="n")
